fix: api and swagger doc api
