# backend/src/routes/index.js
@@ -2,7 +2,7 @@ import { Router } from 'express';
 import authRoute from './auth.route.js'
 import printerRoute from './printer.route.js'
 import notificationRoute from './notification.route.js'
-import uploadRoute from './upload.route.js'
+// import uploadRoute from './upload.route.js'
 import documentRoute from "./document.route.js";
 import feedbackRoute from "./feedback.route.js";
 import pageOrderRoute from "./pageOrder.route.js";
@@ -13,10 +13,10 @@ const route = Router();
 route.use('/auth', authRoute);
 route.use('/printer', printerRoute);
 route.use('/notification', notificationRoute);
-route.use('/file', uploadRoute);
-route.use('/documents', documentRoute);
-route.use('/feedbacks', feedbackRoute);
-route.use('/page-orders', pageOrderRoute);
-route.use('/print-orders', printOrderRouter);
+// route.use('/file', uploadRoute);
+route.use('/document', documentRoute);
+route.use('/feedback', feedbackRoute);
+route.use('/page-order', pageOrderRoute);
+route.use('/print-order', printOrderRouter);
 
 export default route;
